# baton

./: .gitignore  AGENTS.md  README.md  README_cn.md  setup.cfg
baton/: __init__.py  events.py  logger.py  process.py  progress.py  runner.py  session.py  storage.py  utils.py
baton/providers/: __init__.py  claude.py  codex.py
baton/tests/: test_events.py  test_select.py
doc/: plan.md
examples_cn/: demo.py  process_files.py  work_flow.py  work_flow_prompt.md
examples_en/: demo.py  process_files.py  work_flow.py  work_flow_prompt.md
skill/: SKILL.md
