[metadata]
name = baton
version = 0.1.0
description = Python wrapper for codex/claude CLI with unified events, progress, and logs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    baton.tests
    baton.tests.*
